--- a/maps/cities.html
+++ b/maps/cities.html
@@ -169,7 +169,7 @@
                             <td>Излечени</td>
                         </tr>
                         <tr style="color: black; font-weight: bold">
-                            <td>${props.count_healed}</span></td>
+                            <td>${props.count_dead}</span></td>
                             <td>Мртви</td>
                         </tr>
                         <tr>
